--- a/bmc_template/bmc_article.tex
+++ b/bmc_template/bmc_article.tex
@@ -195,8 +195,7 @@
    %email={john.RS.Smith@cambridge.co.uk}
 ]{\inits{AJ}\fnm{Adam} \snm{Jur\v{c}\'\i k}}
 \author[
-   addressref={aff3},
-   %email={john.RS.Smith@cambridge.co.uk}
+   addressref={aff3,aff4},
 ]{\inits{OV}\fnm{Ond\v{r}ej} \snm{V\'{a}vra}}
 \author[
    addressref={aff1},
@@ -234,6 +233,15 @@
   \city{Brno},
   \cny{Czech Republic}
 }
+\address[id=aff4]{%
+  \orgname{International Centre for Clinical Research, St. Anne’s University Hospital},
+  %  Brno, Pekařská 53, 656 91 Brno, Czech Republic
+  \street{Peka\v{r}sk\'a 53}
+  \city{Brno},
+  \cny{Czech Republic}
+}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                                          %%
 %% Enter short notes here                   %%
@@ -473,6 +481,8 @@ The flexible ligand is modeled as a kinematic chain, which increases the dimensi
 To cope with these many-DOF ligands, the RRT-ML~\cite{cortes2007mlrrt} approach is employed as the basic planner in~\cite{cortes2010simulating}.
 RRT-ML expands the tree primarily using those DOFs, that are essential for achieving the motion of the ligand (i.e., rotation
 and translation) and it employs other DOFs (i.e., those that are responsible for conformational changes) if they hinder the growth of the tree.
+The method~\cite{cortes2010simulating} computes any exit pathway without allowing the user to focus the search to a selected tunnel only.
+
 In~\cite{singhLIG}, the pathways for a flexible ligand are found using PRM.
 Each configuration in the roadmap is also evaluated using the electrostatic energy.
 The high-energy configurations are discarded, while the low-energy configurations (and their vicinity) are sampled densely.
@@ -532,26 +542,26 @@ All configurations form the configuration space $\C$.
 The configurations, where the ligand does not collide with the protein, form the subset $\CF \subseteq \C$.
 
 
-A protein tunnel is described by a sequence of $n$ collision-free spheres $T=( (c_i, r_i) )$, $i=1,\ldots,n$, 
+A protein tunnel is described by a sequence of $n_t$ collision-free spheres $T=( (c_i, r_i) )$, $i=1,\ldots,n_t$, 
 where $c_i \in$ $\mathbb{R}^3$ is the center and $r_i > 0$ is the radius of the $i$-th spehere.
 The tunnels can be computed using any existing tool, e.g., CAVER 3.0~\cite{caver3}, or CHEXVIS~\cite{masood2015chexvis}.
 
 Let $a_i(q) \in \R^3$ is the 3D position of the $i$-th atom of the ligand determined by the configuration $q \in \C$.
-The distance between two configurations $q,q' \in \C$ is measured using these atoms positions:
+These atom positions are used to determina the distance between two configururations $q,q' \in \C$ of the ligand:
 
 \begin{equation}
-\dist(q_a,q_b) = \sum_{i=0}^n dist_e(a_i(q),a_i(q'))
+\dist(q,q') = \sum_{i=0}^{n_l} d( a_i(q),a_i(q') )
 \end{equation}
 
 \noindent
-where $n$ is the number of atoms of the ligand, and $dist_e$ is the 3D Euclidean metric.
+where $n_l$ is the number of atoms of the ligand, and $d()$ is the 3D Euclidean metric.
 By computing the distance $\dist$ using the atom positions, the flexbility of the ligand is taken into account.
 
 Collision detection between the atoms of the ligand and the atoms of the protein is used to determine collision-free samples.
 Fast collision detection can be realized using hierarchical methods such as bounding volume hiearchy~\cite{ericson2004real}.
 In the case of protein/ligand interactions, it is common to enable little penetration between the ligand's and 
 the protein's atoms~\cite{cortes2010simulating}, which can be achieved by a slight decrease
-of the atom radii, e.g. to the 80~\% of the original value, which is also considered in this paper.
+of the atom radii, e.g., to the 80~\% of the original value, which is also considered in this paper.
 
 
 \subsection*{Computing Ligand's trajectories using Sampling-based Planning}
@@ -567,6 +577,7 @@ The tree is rooted at the initial configuration $\qstart \in \CF$.
 In each iteration, a random sample $\qrand \in \C$ is generated and its nearest neighbor $\qnear \in \T$ 
 in the tree $\T$ is found according to the metric $\dist$.
 The node $\qnear$ is then expanded.
+The algorithm is terminated if the goal $\qgoal$ is reached to a user-define distance.
 
 The task of the expansion is to find new collision-free configuration $\qnew \in \C$ around $\qnear$ that minimizes the distance
 $\dist$ towards $\qrand$.
@@ -614,6 +625,11 @@ The algorithm terminates after a predefined number of planning trials $\Imax$ or
 the last sphere in the tunnel, i.e., when $v = n$.
 %and the rotational part of $\qrand$ is generated using techniques described in~\cite{kuffnerES}.
 
+The nearest-neighbor search required to find $\qnear$ (line~\ref{alg::kdtree} in Alg.~\ref{alg::main}) can be realized
+using KD-tree data structure.
+After a succesfull expansion by the confiuration $\qnew$, new vector of atom positions $a_i(\qnew)$ is added to the KD-tree.
+
+
 
 \linesnumbered
 \begin{algorithm}[b]
@@ -641,8 +657,8 @@ $\T$.addNode($\qinit$)\;
     }{
         $\qrand$ = random sample from $\C$; \nllabel{main::s2} \\
     }
-    $\qnear$ = nearest node in $\T$ towards $\qrand$\;
-    expand($\T, \qnear,\qrand$)\;
+    $\qnear$ = nearest node in $\T$ towards $\qrand$\; \nllabel{alg::kdtree}
+    expand($\T, \qnear,\qrand$)\; 
     \For{$i=v,v+1,\ldots,n$}{ \nllabel{alg::main:a}
         $q'$=$\T$.nearestNode($c_i$)\;
         \If{$\distt(c_i,q') > \dtg $}{
@@ -695,11 +711,6 @@ $\qnew = \emptyset$; // empty configuration \nllabel{alg::expa} \\
 }
 \end{algorithm}
 
-The result of each planning trial is the tree $\T$ of collision-free configurations in which a path
-between $\qinit$ (root of the tree) and $q'$ is found, where
- $q'$ is the nearest node to the end of the tunnel (measured using the 3D Euclidean metric). 
-
-
 
 \section*{Results and Discussion}
 \subsection*{Experimental Verification}
@@ -732,6 +743,16 @@ m133 (4 atoms, 0 dofs)
 m141 (6 atoms, 2 dofs)
 
 m037t (1,2-Dichloroethane), m038t (1,3-Dichloropropane), m056 (2-Chlorobutane), and m080 (Trichloropropane).
+
+
+DCP.pdb, Dichloropropanol
+m037t.pdb, 1,2-Dichloroethane
+m038t.pdb, 1,3-Dichloropropane
+m040.pdb, 1,5-Dichloropentane
+m056.pdb, 2-Chlorobutane
+m080.pdb, Trichloropropane
+
+
 
 \subsubsection*{Analysis of MD simulation}
 
@@ -771,19 +792,6 @@ This was observed in a separate MD simulation of the DCP ligand in the 4E46 prot
 The necessity to scaled-down even more than 0.8, which is a value used by other tools~\cite{cortes2010simulating}, was
 shown also in the second experiment, where the trajectory for the inhibitor of the 4L2L protein required scaling down to 0.5 or 0.6.
 
-{\def\a{0}
-\begin{figure}[t]
-\centering
-\includegraphics[width=0.44\textwidth,angle=\a]{fig/crop3}
-\includegraphics[width=0.44\textwidth,angle=\a]{fig/crop4}
-\caption{\label{fig::comparison}
-    \small
-    Runtimes and the distance to the active site for the m037 ligand at scale 0.7.
-    The values are computed from all 200 trials (20 initial configurations $\times$ 10 trials).
-    Only each third frame is shown in the graph.
-}
-\end{figure}
-}
 
 \begin{figure}
 \centering
@@ -828,6 +836,11 @@ The expansion prefers atoms with a higher scale, which ensures that the ligand s
 
 \section*{Acknowledgements}
 The presented work has been supported by the Czech Science Foundation (GA{\v C}R) under research project No. 17-07690S.
+Computational resources were provided by the CESNET and CERIT Scientific Cloud
+(grant nos. LM2015042 and LM2015085) and grant of the Ministry of Education of
+the Czech Republic ESFRI Czech National Infrastructure for Biological Data (no.
+LM2015047). OV is the recipient of a Ph.D. Talent award provided by Brno City Municipality.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                  The Bibliography                       %%
