--- a/bmc_template/paper.bib
+++ b/bmc_template/paper.bib
@@ -41,7 +41,7 @@
   file		= {10.1.1.50.3744.pdf}
 }
 
-@InProceedings{	  hsu06multilevel,
+@InProceedings{hsu06multilevel,
   author	= {D. Hsu and H. Cheng and J.-C. Latombe},
   title		= {Multi-level free-space dilation for sampling narrow
 		  passages in {PRM} planning},
@@ -743,3 +743,25 @@
    Number="5",
    Pages="e33931"
 }
+
+
+@article{jusot2018exhaustive,
+  title={Exhaustive exploration of the conformational landscape of small cyclic peptides using a robotics approach},
+  author={Jusot, Maud and Stratmann, Dirk and Vaisset, Marc and Chomilier, Jacques and Cort{\'e}s, Juan},
+  journal={Journal of chemical information and modeling},
+  volume={58},
+  number={11},
+  pages={2355--2368},
+  year={2018},
+  publisher={ACS Publications}
+}
+
+@inproceedings{vonasek2018motion,
+	title = "Motion Planning of 3D Objects Using Rapidly Exploring Random Tree Guided by Approximate Solutions",
+	author = "V. Von\'{a}sek",
+	booktitle = "International Conference on Emerging Technologies and Factory Automation",
+	year = 2018,
+	doi = "10.1109/ETFA.2018.8502446",
+	pdf = "data/papers/etfa2018_vonasek.pdf"
+}
+
